// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<OrganizationWrapper /> interactions should render main title if pageTitle is undefined 1`] = `<div />`;

exports[`<OrganizationWrapper /> interactions should render pageTitle if it is not undefined 1`] = `
<div>
  <div
    class="app-container "
  >
    <div
      class="header-container header-desktop"
    >
      <div
        class="header-row-1"
      >
        <div
          class="header-row-1-inner"
        >
          <div
            class="header-left"
          >
            <div
              class="header-logo-div"
            >
              <a
                href="/default"
              >
                <img
                  alt="openwisp"
                  class="header-logo-image header-desktop-logo-image"
                  src="/assets/default//assets/default/openwisp-logo-black.svg"
                />
              </a>
            </div>
          </div>
          <div
            class="header-right"
          >
            <button
              class="active header-language-btn header-desktop-language-btn header-language-btn-en"
              type="button"
            >
              english
            </button>
            <button
              class="header-language-btn header-desktop-language-btn header-language-btn-it"
              type="button"
            >
              italian
            </button>
          </div>
        </div>
      </div>
      <div
        class="header-row-2"
      >
        <div
          class="header-row-2-inner"
        >
          <a
            class="header-link header-desktop-link
                  header-link-1  button "
            href="/default/login"
          >
            Sign In
          </a>
          <a
            class="header-link header-desktop-link
                  header-link-2  button "
            href="/default/registration"
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
    <div
      class="header-mobile "
    >
      <div
        class="header-row-1"
      >
        <div
          class="header-row-1-inner"
        >
          <div
            class="header-left"
          >
            <div
              class="header-logo-div"
            >
              <a
                href="/default"
              >
                <img
                  alt="openwisp"
                  class="header-logo-image header-mobile-logo-image"
                  src="/assets/default//assets/default/openwisp-logo-black.svg"
                />
              </a>
            </div>
          </div>
          <div
            class="header-right"
          >
            <div
              aria-label="Menu Button"
              class="header-hamburger"
              role="button"
              tabindex="0"
            >
              <div
                class=""
              />
              <div
                class=""
              />
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="display-none header-mobile-menu"
      >
        <a
          class="header-link mobile-link
                    header-link-1  button"
          href="/default/login"
        >
          Sign In
        </a>
        <a
          class="header-link mobile-link
                    header-link-2  button"
          href="/default/registration"
        >
          Sign Up
        </a>
        <div
          class="mobile-languages-row"
        >
          <button
            class="active header-language-btn header-mobile-language-btn header-language-btn-en"
            type="button"
          >
            english
          </button>
          <button
            class="header-language-btn header-mobile-language-btn header-language-btn-it"
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
    <div
      class="container content"
      id="not-foud-404"
    >
      <div
        class="inner"
      >
        <div
          class="main-column"
        >
          <div
            class="inner"
          >
            <div
              class="row owisp-404-row-1"
            >
              Oops!
            </div>
            <div
              class="row owisp-404-row-2"
            >
              404 Not Found
            </div>
            <div
              class="row owisp-404-row-3"
            >
              Sorry, an error has occurred, Requested page not found!
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer-container"
    >
      <div
        class="footer-row-1"
      >
        <div
          class="footer-row-1-inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<OrganizationWrapper /> interactions should show route for authenticated users 1`] = `<div />`;

exports[`Test <OrganizationWrapper /> routes should display status if authenticated 1`] = `
<div>
  <div
    class="app-container "
  >
    <div
      class="header-container header-desktop"
    >
      <div
        class="header-row-1"
      >
        <div
          class="header-row-1-inner"
        >
          <div
            class="header-left"
          >
            <div
              class="header-logo-div"
            >
              <a
                href="/undefined"
              >
                <img
                  alt="openwisp"
                  class="header-logo-image header-desktop-logo-image"
                  src="/assets/undefined//assets/default/openwisp-logo-black.svg"
                />
              </a>
            </div>
          </div>
          <div
            class="header-right"
          >
            <button
              class="active header-language-btn header-desktop-language-btn header-language-btn-en"
              type="button"
            >
              english
            </button>
            <button
              class="header-language-btn header-desktop-language-btn header-language-btn-it"
              type="button"
            >
              italian
            </button>
          </div>
        </div>
      </div>
      <div
        class="header-row-2"
      >
        <div
          class="header-row-2-inner"
        >
          <a
            class="header-link header-desktop-link
                  header-link-1  button "
            href="/undefined/login"
          >
            Sign In
          </a>
          <a
            class="header-link header-desktop-link
                  header-link-2  button "
            href="/undefined/registration"
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
    <div
      class="header-mobile "
    >
      <div
        class="header-row-1"
      >
        <div
          class="header-row-1-inner"
        >
          <div
            class="header-left"
          >
            <div
              class="header-logo-div"
            >
              <a
                href="/undefined"
              >
                <img
                  alt="openwisp"
                  class="header-logo-image header-mobile-logo-image"
                  src="/assets/undefined//assets/default/openwisp-logo-black.svg"
                />
              </a>
            </div>
          </div>
          <div
            class="header-right"
          >
            <div
              aria-label="Menu Button"
              class="header-hamburger"
              role="button"
              tabindex="0"
            >
              <div
                class=""
              />
              <div
                class=""
              />
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="display-none header-mobile-menu"
      >
        <a
          class="header-link mobile-link
                    header-link-1  button"
          href="/undefined/login"
        >
          Sign In
        </a>
        <a
          class="header-link mobile-link
                    header-link-2  button"
          href="/undefined/registration"
        >
          Sign Up
        </a>
        <div
          class="mobile-languages-row"
        >
          <button
            class="active header-language-btn header-mobile-language-btn header-language-btn-en"
            type="button"
          >
            english
          </button>
          <button
            class="header-language-btn header-mobile-language-btn header-language-btn-it"
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
    <div
      class="container content"
      id="not-foud-404"
    >
      <div
        class="inner"
      >
        <div
          class="main-column"
        >
          <div
            class="inner"
          >
            <div
              class="row owisp-404-row-1"
            >
              Oops!
            </div>
            <div
              class="row owisp-404-row-2"
            >
              404 Not Found
            </div>
            <div
              class="row owisp-404-row-3"
            >
              Sorry, an error has occurred, Requested page not found!
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer-container"
    >
      <div
        class="footer-row-1"
      >
        <div
          class="footer-row-1-inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test <OrganizationWrapper /> routes should redirect to login if not authenticated 1`] = `
<div>
  <div
    class="app-container "
  >
    <div
      class="header-container header-desktop"
    >
      <div
        class="header-row-1"
      >
        <div
          class="header-row-1-inner"
        >
          <div
            class="header-left"
          >
            <div
              class="header-logo-div"
            >
              <a
                href="/undefined"
              >
                <img
                  alt="openwisp"
                  class="header-logo-image header-desktop-logo-image"
                  src="/assets/undefined//assets/default/openwisp-logo-black.svg"
                />
              </a>
            </div>
          </div>
          <div
            class="header-right"
          >
            <button
              class="active header-language-btn header-desktop-language-btn header-language-btn-en"
              type="button"
            >
              english
            </button>
            <button
              class="header-language-btn header-desktop-language-btn header-language-btn-it"
              type="button"
            >
              italian
            </button>
          </div>
        </div>
      </div>
      <div
        class="header-row-2"
      >
        <div
          class="header-row-2-inner"
        >
          <a
            class="header-link header-desktop-link
                  header-link-1  button "
            href="/undefined/login"
          >
            Sign In
          </a>
          <a
            class="header-link header-desktop-link
                  header-link-2  button "
            href="/undefined/registration"
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
    <div
      class="header-mobile "
    >
      <div
        class="header-row-1"
      >
        <div
          class="header-row-1-inner"
        >
          <div
            class="header-left"
          >
            <div
              class="header-logo-div"
            >
              <a
                href="/undefined"
              >
                <img
                  alt="openwisp"
                  class="header-logo-image header-mobile-logo-image"
                  src="/assets/undefined//assets/default/openwisp-logo-black.svg"
                />
              </a>
            </div>
          </div>
          <div
            class="header-right"
          >
            <div
              aria-label="Menu Button"
              class="header-hamburger"
              role="button"
              tabindex="0"
            >
              <div
                class=""
              />
              <div
                class=""
              />
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="display-none header-mobile-menu"
      >
        <a
          class="header-link mobile-link
                    header-link-1  button"
          href="/undefined/login"
        >
          Sign In
        </a>
        <a
          class="header-link mobile-link
                    header-link-2  button"
          href="/undefined/registration"
        >
          Sign Up
        </a>
        <div
          class="mobile-languages-row"
        >
          <button
            class="active header-language-btn header-mobile-language-btn header-language-btn-en"
            type="button"
          >
            english
          </button>
          <button
            class="header-language-btn header-mobile-language-btn header-language-btn-it"
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
    <div
      class="container content"
      id="not-foud-404"
    >
      <div
        class="inner"
      >
        <div
          class="main-column"
        >
          <div
            class="inner"
          >
            <div
              class="row owisp-404-row-1"
            >
              Oops!
            </div>
            <div
              class="row owisp-404-row-2"
            >
              404 Not Found
            </div>
            <div
              class="row owisp-404-row-3"
            >
              Sorry, an error has occurred, Requested page not found!
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer-container"
    >
      <div
        class="footer-row-1"
      >
        <div
          class="footer-row-1-inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Organization Wrapper for authenticated and unverified users should show route for unverified users 1`] = `<div />`;

exports[`Test Organization Wrapper for unauthenticated users should show route for unauthenticated users 1`] = `<div />`;
